--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -1,7 +1,7 @@
 {% extends CMS_TEMPLATE %}
 
-{% load i18n %}
-
+{% load i18n static %}
+{% load sekizai_tags %}
 
 {% block main %}
 {% block top_search %}
@@ -28,6 +28,39 @@
 {% endblock %}
 
 {% block content %}
-
 {% endblock %}
+
+{% addtoblock "css" %}
+  <link rel="stylesheet" href="{% static "eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.css" %}" media="screen" charset="utf-8">
+{% endaddtoblock %}
+
+{% addtoblock "js" %}
+  <script src="{% static "eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.min.js" %}" charset="utf-8"></script>
+{% endaddtoblock %}
+
+{% addtoblock "js" %}
+  <script type="text/javascript">
+  (function(){
+    var searchUrl = '{% url 'eurosfueraerzte:eurosfueraerzte-search' %}';
+    var xhr;
+    $("#id_q").autoComplete({
+      source: function(term, response){
+        try { xhr.abort(); } catch(e){}
+        xhr = $.getJSON(searchUrl, { q: term }, function(data){ response(data); });
+      },
+      renderItem: function (itemObj, search){
+        item = itemObj.name;
+        search = search.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&');
+        var re = new RegExp("(" + search.split(' ').join('|') + ")", "gi");
+        return '<div class="autocomplete-suggestion" data-url="' +itemObj.url + '" data-val="' + item + '">' +
+              item.replace(re, "<mark>$1</mark>") + '</div>';
+      },
+      onSelect: function(e, term, item){
+        document.location.href = $(item).data('url');
+      }
+    });
+  }());
+  </script>
+{% endaddtoblock %}
+
 {% endblock %}
