--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -14,7 +14,7 @@
   <thead>
     <tr>
       <th>{% trans "Name" %}</th>
-      <th>{% trans "Number of Studies" %}</th>
+      <th>{% trans "Number of Observational Studies" %}</th>
     </tr>
   </thead>
   <tbody>
@@ -32,5 +32,5 @@
   {% endfor %}
   </tbody>
 </table>
-
+{% include "correctiv_eurosfueraerzte/_disclaimer.html" %}
 {% endblock %}
