--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/plugins/search_tile.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/plugins/search_tile.html
@@ -1,7 +1,7 @@
 {% load i18n static sekizai_tags %}
 
 <li class="entry-list-item -featured">
-  <div class="entry-list-item__content search-tile">
+  <div class="search-tile">
 
       <h2 class="search-tile__logo">
         {% trans "Euros for Doctors" %}
@@ -11,14 +11,20 @@
         <p class="search-tile__claim">
           {% trans "Is your medicine pushed by big pharma?" %}
         </p>
-        <div class="form-group">
-          <div class="input-group">
-            <input id="eurosfueraerzte-q" name="q" type="text" class="form-control" placeholder="{% trans "Medikament" %}">
-            <span class="input-group-btn">
-              <button class="btn btn-primary" type="submit">{% trans "Search" %}</button>
-            </span>
-          </div>
+
+        <div class="input-group">
+          <input id="eurosfueraerzte-q" name="q" type="text" class="form-control" placeholder="{% trans "Drug name" %}">
+          <span class="input-group-btn">
+            <button class="btn btn-primary" type="submit">{% trans "Search" %}</button>
+          </span>
         </div>
+
+        <small class="search-tile__help">
+          {% trans "Example:" %}
+          <a class="search-tile__link" href="{% url 'eurosfueraerzte:eurosfueraerzte-search' %}?q=Avastin">
+            {% trans "Avastin" %}
+          </a>
+        </small>
       </form>
 
   </div>
