--- a/correctiv_eurosfueraerzte/static/eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.css
+++ b/correctiv_eurosfueraerzte/static/eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.css
@@ -4,6 +4,6 @@
     /* core styles should not be changed */
     position: absolute; display: none; z-index: 9999; max-height: 254px; overflow: hidden; overflow-y: auto; box-sizing: border-box;
 }
-.autocomplete-suggestion { position: relative; padding: 0 .6em; line-height: 23px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 1.02em; color: #333; }
-.autocomplete-suggestion mark { font-weight: normal; }
+.autocomplete-suggestion { position: relative; padding: 0 .6em; line-height: 23px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 1.02em; color: #333; cursor: pointer; }
+.autocomplete-suggestion mark { padding: 0; font-weight: normal; }
 .autocomplete-suggestion.selected { background: #f0f0f0; }
