Change wording of homepage link

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -8,7 +8,7 @@
   <h1>{% trans "Search „Euros for Doctors“ Database" %}</h1>
   <div class="pull-right">
     <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
-      {% trans "back to the main page" %}
+      {% trans "back to the index" %}
     </a>
   </div>
   <form action="{% url 'eurosfueraerzte:eurosfueraerzte-search' %}" method="get">
