--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -5,25 +5,29 @@
 
 {% block main %}
 {% block top_search %}
-  <h1>{% trans "Search „Euros for Doctors“ Database" %}</h1>
-  <div class="pull-right">
-    <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
-      {% trans "back to the index" %}
-    </a>
-  </div>
-  <form action="{% url 'eurosfueraerzte:eurosfueraerzte-search' %}" method="get">
-    <div class="form-group">
-      <label for="id_q">
-        {% trans "Search for your medicine" %}
-      </label>
-      <div class="input-group">
-        {{ form.q }}
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
-        </span>
+  <h1>{% trans "Database Search" %}</h1>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="pull-right">
+        <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
+          {% trans "back to the index" %}
+        </a>
       </div>
+      <form action="{% url 'eurosfueraerzte:eurosfueraerzte-search' %}" method="get">
+        <div class="form-group">
+          <label for="id_q">
+            {% trans "Search for your medicine" %}
+          </label>
+          <div class="input-group">
+            {{ form.q }}
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
+            </span>
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
+  </div>
 
 {% endblock %}
 
