--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -8,11 +8,13 @@
   <h1>{% trans "Database Search" %}</h1>
   <div class="row">
     <div class="col-md-8">
-      <div class="pull-right">
-        <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
-          {% trans "back to the index" %}
-        </a>
-      </div>
+      {% if not is_index %}
+        <div class="pull-right">
+          <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
+            {% trans "back to the index" %}
+          </a>
+        </div>
+      {% endif %}
       <form action="{% url 'eurosfueraerzte:eurosfueraerzte-search' %}" method="get">
         <div class="form-group">
           <label for="id_q">
