--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
@@ -10,10 +10,20 @@
   <meta name="description" content="{{ description }}">
 {% endblock %}
 
+{% block before_content %}
+  <header class="efa__header">
+    <h1>
+      <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
+      {% trans "Euros for Doctors" %}
+      </a>
+    </h1>
+    <h2>
+      {{ object.get_full_name }}
+    </h2>
+  </header>
+{% endblock %}
+
 {% block content %}
-  <h2>
-    {{ object.get_full_name }}
-  </h2>
 
   {# Total #}
 
