Move styling to correctiv.org repository.
Workaround:

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -21,7 +21,7 @@
   </div>
 
   {% addtoblock "css" %}
-    <link type="text/less" rel="stylesheet" href="{% static "eurosfueraerzte/css/eurosfueraerzte.less" %}" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="{% static "css/themes/eurosfueraerzte.css" %}" media="screen" charset="utf-8">
     <link rel="stylesheet" href="{% static "eurosfueraerzte/jquery.auto-complete/jquery.auto-complete.css" %}" media="screen" charset="utf-8">
   {% endaddtoblock %}
 
