--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
@@ -11,15 +11,32 @@
 {% endblock %}
 
 {% block before_content %}
-  <header class="efa__header">
-    <h1>
-      <a href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
-      {% trans "Euros for Doctors" %}
-      </a>
-    </h1>
-    <h2>
-      {{ object.get_full_name }}
-    </h2>
+  <header class="efa__header--split">
+    <div class="container">
+      <div class="efa__header__main">
+        <div class="efa__header__content">
+          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
+            {% trans "Euros for Doctors" %}
+          </a>
+          <h2 class="efa__header__title">
+            {{ object.get_full_name }}
+          </h2>
+          {% if object.orientation %}
+            <span class="efa__header__meta">{{ object.orientation }}</span>
+          {% endif %}
+          <a class="efa__header__back-link" href="#">{{ object.location }}</a>
+        </div>
+      </div>
+      <div class="efa__header__sidebar">
+        <div class="efa__header__about">
+          <h1 class="efa__header__title--light">
+            {% trans "Euros for Doctors" %}
+          </h1>
+          <p>Die Pharamaunternehmen veröffentlichen erstmals Gelder die sie an Ärzte und Einrichtungen, Lorem Ipsum mehr Text.</p>
+          <a class="efa__header__more-link" href="#">zum Hintergrundartikel</a>
+        </div>
+      </div>
+    </div>
   </header>
 {% endblock %}
 
