Detail header: Add pharma version.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
@@ -27,7 +27,7 @@
           <a class="efa__header__back-link" href="#">{{ object.location }}</a>
         </div>
       </div>
-      <div class="efa__header__sidebar">
+      <div class="efa__header__sidebar--pharma">
         <div class="efa__header__about">
           <h1 class="efa__header__title--light">
             {% trans "Euros for Doctors" %}
