--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/doctor_detail.html
@@ -48,7 +48,6 @@
         <tr>
           <th>{% trans "Company" %}</th>
           <th>{% trans "Payment type" %}</th>
-          {# <th>{% trans "Year" %}</th>#}
           <th class="text-right">{% trans "Amount" %}</th>
         </tr>
       </thead>
@@ -75,6 +74,12 @@
           </td>
           <td>
             {{ payment.get_label_display }}
+            {% if payment.recipient_detail %}
+              <br/>
+              <small>
+                {% trans "to:" %} {{ payment.recipient_detail }}
+              </small>
+            {% endif %}
           </td>
           {# <td> {{ payment.date.year }} </td>#}
           <td class="text-right">
