--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -24,7 +24,7 @@
 
 {% block header_sidebar_about %}
   <p>{% blocktrans with name=object.name %}Gesamtsumme, die die {{ name }} im vergangenen Jahr an Ärzte und Einrichtungen gezahlt hat.{% endblocktrans %}</p>
-  <a class="efa__header__more-link" href="#">read the background article</a>
+  <a class="efa__header__more-link" href="#">background article</a>
 {% endblock %}
 
 {% block content %}
