--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -1,6 +1,7 @@
 {% extends "correctiv_eurosfueraerzte/base_detail.html" %}
 
-{% load i18n %}
+{% load i18n l10n %}
+{% load humanize %}
 {% load number_utils %}
 
 {% block title %}{% blocktrans with name=object.name %}Pharma company {{ name }}{% endblocktrans %}{% endblock %}
@@ -16,7 +17,7 @@
 {% endblock %}
 
 {% block header_sidebar_title %}
-  XX Mio. €
+  {{ payments.total|intword }}&nbsp;€
   {# TODO: payments total #}
 {% endblock %}
 
@@ -31,15 +32,43 @@
 
   <div class="page__row">
     <div class="page__section -narrow">
-      <p>Die Zahlungen an Ärzte für Tagungsgebühren, Reisekosten, Beratungs&shy;honorare und Spesen werden personenbezogen veröffentlicht – wenn der jeweilige Arzt zustimmt. Für den Rest wird die Summe zusammengefasst angegeben. Grundsätzlich nur zusammengefasst werden die Zahlungen im Rahmen von Studien und Anwendungsbeobachtungen veröffentlicht.</p>
+      <p>Die Zahlungen an Ärzte für Tagungsgebühren, Reisekosten, Beratungs&shy;honorare und Spesen werden personenbezogen veröffentlicht – wenn der jeweilige Arzt zustimmt. Für den Rest wird die Summe zusammengefasst angegeben. Grundsätzlich nur zusammengefasst werden die Zahlungen im Rahmen von Studien und Anwendungsbeobachtungen veröffentlicht.
+      <br/>
+      Forschungszahlungen: {{ payments.rnd|intcomma_floatformat:2 }}&nbsp;€.
+      </p>
     </div>
 
     <div class="page__sidebar">
       <div class="well">
-        <p>Die Informationen auf dieser Seite stammen von den 54 Mitgliedsfirmen der „Freiwilligen Selbstkontrolle für die Arzneimittelindustrie e.V.“, die diese Angaben auf ihren jeweiligen Webseiten veröffentlicht haben.</p>
+        <p>
+          Die Informationen auf dieser Seite stammen von den 54 Mitgliedsfirmen der „Freiwilligen Selbstkontrolle für die Arzneimittelindustrie e.V.“, die diese Angaben auf ihren jeweiligen Webseiten veröffentlicht haben.
+        </p>
       </div>
     </div>
   </div>
+
+  <div class="page__row">
+    <div class="page__section -narrow">
+      <header class="page__section-header ">
+        <h3 class="page__section-headline">{% trans "Payments to doctors" %}</h3>
+      </header>
+      {% for label in payments.hcp.labels %}
+        {% include "correctiv_eurosfueraerzte/_company_payment_label.html" with label=label %}
+      {% endfor %}
+    </div>
+</div>
+
+
+<div class="page__row">
+  <div class="page__section -narrow">
+    <header class="page__section-header ">
+      <h3 class="page__section-headline">{% trans "Payments to organisations" %}</h3>
+    </header>
+    {% for label in payments.hco.labels %}
+      {% include "correctiv_eurosfueraerzte/_company_payment_label.html" with label=label %}
+    {% endfor %}
+  </div>
+</div>
 
   <div class="page__row">
     <div class="page__section -narrow">
