Update markup for recipient name.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -12,9 +12,9 @@
 
 {% block header_title %}
   {% if object.title %}
-    <small>{{ object.title }}</small><br/>
+    <span class="efa__header__academic-title">{{ object.title }}</span>
   {% endif %}
-  {{ object.get_full_name }}
+  <span class="efa__header__name">{{ object.get_full_name }}</span>
 {% endblock %}
 
 {% block header_content %}
